# genius-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: album.rs  annotation.rs  auth.rs  error.rs  lib.rs  search.rs  song.rs  user.rs
src/auth/: login.rs
