[package]
name = "genius-rs"
description = "Rust library that allows interact with Genius API"
version = "0.3.0"
authors = ["Pedro Mendes <pedromendescraft@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/alt-art/genius-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["json"]}
serde = { version = "1.0.130", features = ["derive"] }
scraper = "0.12.0"

[dev-dependencies]
tokio = {version = "1.10.1", features = ["full"]}
dotenv = "0.15.0"
