[package]
name = "genius-rs"
description = "Rust library that allows interact with Genius API"
version = "0.5.0"
authors = ["Pedro Mendes <pedromendescraft@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/alt-art/genius-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
hmac = "0.12.1"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
sha2 = "0.10.2"
thiserror = "1.0.31"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
dotenv = "0.15.0"
